--- a/templates/base.html
+++ b/templates/base.html
@@ -187,7 +187,7 @@
             <div class="logo" style="display: flex; align-items: center;">
                 <a href="/{{city}}/"><img src="{% static 'logolight2.png' %}" alt="CineFare" width="50" /></a>
                 <a class="logo-text ml-4" style="text-decoration: none; color: white;" href="/{{city}}/">
-                    <h1>cinefare</h1>
+                    <h1>MovieFlix</h1>
                 </a>
             </div>
 
@@ -408,7 +408,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
-                    <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by <a href="#">CineFare</a>.</p>
+                    <p class="copyright-text">Copyright &copy; 2025 All Rights Reserved by <a href="#">MovieFlix</a>.</p>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <ul class="social-icons">
@@ -442,18 +442,18 @@
                 <div>
                     <h4>Meet Our Team</h4>
                     <p style="color: #aaabad;">
-                        Sai Pranay Deep |
-                        B Rithvik |
-                        Sai Ruchitha |
-                        Hema Deepika
+                        Kashak Thakur |
+                        Jatin Ratra |
+                        Harman Katodia |
+                        Harishnoor Kaur
                     </p>
                 </div>
                 <div style="margin-left: auto;">
                     <h4>Contact US</h4>
                     <a href="tel:+918639065627?text=Hello%20Sai%20Pranay%20Deep,%20I%20have%20a%20question."
                         target="_blank">Whatsapp</a> |
-                    <a href="mailto:cse220001034@iiti.ac.in">Mail</a> |
-                    <a href="tel:+918639065627">phone</a>
+                    <a href="mailto:ratrajatin020106@gmail.com">Mail</a> |
+                    <a href="tel:+917508099049">phone</a>
                 </div>
             </div>
         </div>
