--- a/templates/theatres.html
+++ b/templates/theatres.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} CineFare {% endblock %}
+{% block title %} MovieFlix {% endblock %}
 {% block css %}
 <style>
    .avaliable {
